--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     rootDir: backend
     buildCommand: "./build.sh"
-    startCommand: "gunicorn tanorin_backend.wsgi:application"
+    startCommand: "gunicorn --bind 0.0.0.0:$PORT tanorin_backend.wsgi:application"
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.18
