Fix gunicorn execution: use 'python -m gunicorn', update Python to 3.11.9, add gunicorn verification

--- a/render.yaml
+++ b/render.yaml
@@ -4,10 +4,10 @@ services:
     env: python
     rootDir: backend
     buildCommand: "./build.sh"
-    startCommand: "gunicorn --bind 0.0.0.0:$PORT tanorin_backend.wsgi:application"
+    startCommand: "python -m gunicorn --bind 0.0.0.0:$PORT tanorin_backend.wsgi:application"
     envVars:
       - key: PYTHON_VERSION
-        value: 3.9.18
+        value: 3.11.9
       - key: SECRET_KEY
         generateValue: true
       - key: WEB_CONCURRENCY
