--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     rootDir: backend
     buildCommand: "./build.sh"
-    startCommand: "python -m gunicorn --bind 0.0.0.0:$PORT tanorin_backend.wsgi:application"
+    startCommand: "python3 -m gunicorn --bind 0.0.0.0:$PORT tanorin_backend.wsgi:application"
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.9
