--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,16 +3,14 @@ nixPkgs = ["python311", "postgresql"]
 
 [phases.install]
 cmds = [
-  "cd backend",
-  "pip install -r requirements.txt"
+  "cd backend && python3 -m pip install -r requirements.txt"
 ]
 
 [phases.build]
 cmds = [
-  "cd backend",
-  "python manage.py collectstatic --no-input",
-  "python manage.py migrate --no-input"
+  "cd backend && python3 manage.py collectstatic --no-input",
+  "cd backend && python3 manage.py migrate --no-input"
 ]
 
 [start]
-cmd = "cd backend && gunicorn tanorin_backend.wsgi:application"
+cmd = "cd backend && python3 -m gunicorn tanorin_backend.wsgi:application"
