--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,8 @@
 [phases.build]
 cmds = [
-  "cd backend && python manage.py collectstatic --no-input",
-  "cd backend && python manage.py migrate --no-input"
+  "cd backend && python3 manage.py collectstatic --no-input",
+  "cd backend && python3 manage.py migrate --no-input"
 ]
 
 [start]
-cmd = "cd backend && gunicorn tanorin_backend.wsgi:application"
+cmd = "cd backend && python3 -m gunicorn tanorin_backend.wsgi:application"
