Force Python provider in Nixpacks to avoid Node.js detection

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,9 +1,18 @@
+providers = ["python"]
+
+[phases.setup]
+nixPkgs = ["python311", "python311Packages.pip", "postgresql", "gcc"]
+
+[phases.install]
+cmds = [
+  "python3 -m pip install -r requirements.txt"
+]
+
 [phases.build]
 cmds = [
-  "...",
-  "cd backend && python manage.py collectstatic --no-input",
-  "cd backend && python manage.py migrate --no-input"
+  "cd backend && python3 manage.py collectstatic --no-input",
+  "cd backend && python3 manage.py migrate --no-input"
 ]
 
 [start]
-cmd = "cd backend && python -m gunicorn tanorin_backend.wsgi:application"
+cmd = "cd backend && python3 -m gunicorn tanorin_backend.wsgi:application"
