Bootstrap pip with ensurepip in Nixpacks config

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,6 +5,7 @@ nixPkgs = ["python311", "python311Packages.pip", "postgresql", "gcc"]
 
 [phases.install]
 cmds = [
+  "python3 -m ensurepip",
   "python3 -m pip install -r requirements.txt"
 ]
 
