--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,19 +1,20 @@
 providers = ["python"]
 
 [phases.setup]
-nixPkgs = ["python311", "python311Packages.pip", "postgresql", "gcc"]
+nixPkgs = ["python311", "gcc"]
 
 [phases.install]
 cmds = [
-  "python3 -m ensurepip",
-  "python3 -m pip install -r requirements.txt"
+  "python3 -m venv venv",
+  "./venv/bin/pip install --upgrade pip",
+  "./venv/bin/pip install -r requirements.txt"
 ]
 
 [phases.build]
 cmds = [
-  "cd backend && python3 manage.py collectstatic --no-input",
-  "cd backend && python3 manage.py migrate --no-input"
+  "cd backend && ../venv/bin/python manage.py collectstatic --no-input",
+  "cd backend && ../venv/bin/python manage.py migrate --no-input"
 ]
 
 [start]
-cmd = "cd backend && python3 -m gunicorn tanorin_backend.wsgi:application"
+cmd = "cd backend && ../venv/bin/gunicorn tanorin_backend.wsgi:application"
