--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev:all": "concurrently \"npm run dev\" \"./venv/bin/python3 manage.py runserver\"",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve -s dist -l $PORT"
   },
   "dependencies": {
     "axios": "^1.13.2",
@@ -35,6 +36,7 @@
     "globals": "^16.5.0",
     "jsdom": "^27.4.0",
     "postcss": "^8.5.6",
+    "serve": "^14.2.5",
     "tailwindcss": "^4.1.18",
     "vite": "^7.2.4",
     "vitest": "^4.0.17"
