Prioritize admin creation over data loading

--- a/nixpacks-backend.toml
+++ b/nixpacks-backend.toml
@@ -17,4 +17,4 @@ cmds = [
 ]
 
 [start]
-cmd = "cd backend && /app/venv/bin/python manage.py loaddata db_dump.json && /app/venv/bin/python create_admin.py && /app/venv/bin/gunicorn tanorin_backend.wsgi:application"
+cmd = "cd backend && /app/venv/bin/python create_admin.py && /app/venv/bin/python manage.py loaddata db_dump.json && /app/venv/bin/gunicorn tanorin_backend.wsgi:application"
